--- a/.gitignore
+++ b/.gitignore
@@ -51,7 +51,7 @@ pids
 *.pid
 *.seed
 *.pid.lock
-.http
+*.http
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
