Deploy #2 [package.json modificado]

--- a/package.json
+++ b/package.json
@@ -2,16 +2,19 @@
   "name": "nestbackendpruebatecnica",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Omar Cabarcas",
   "private": true,
   "license": "UNLICENSED",
+  "engines": {
+    "node": ">=18.x"
+  },
+  "main": "dist/main.js",
   "scripts": {
-    "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "ts-node src/main.ts",
-    "start:dev": "NODE_ENV=dev npm run build nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "NODE_ENV=prod node dist/main",
+    "build": "nest build",
+    "start": "node dist/main",
+    "start:dev": "NODE_ENV=dev nest start --watch",
+    "start:prod": "NODE_ENV=prod npm run build && npm run start --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -19,6 +22,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
+  
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
